[package]
name = "modality-capi"
version = "0.1.0"
edition = "2021"
authors = ["Jon Lamb <jon@auxon.io>"]
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/modality-sdk"
description = "The C & C++ FFI for Auxon's Modality SDK"
homepage = "https://auxon.io/"
build = "build.rs"
exclude = ["ctest"]
publish = false

[workspace]

[lib]
name = "modality"
crate-type = ["cdylib", "staticlib"]

[dependencies]
modality-api = { path = "../rust/modality-api" }
modality-ingest-client = { path = "../rust/modality-ingest-client" }
modality-ingest-protocol = { path = "../rust/modality-ingest-protocol" }
modality-mutator-protocol = { path = "../rust/modality-mutator-protocol" }
modality-mutator-server = { path = "../rust/modality-mutator-server", features = ["server"] }
modality-mutation-plane = { path = "../rust/modality-mutation-plane" }
modality-mutation-plane-client = { path = "../rust/modality-mutation-plane-client" }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
async-trait = "0.1"
url = { version = "2.1" }
uuid = { version = "1.0", features = ["v4"] }
hex = "0.4"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
cbindgen = "0.24"
cdylib-link-lines = "0.1"

[profile.release-with-debug]
inherits = "release"
debug = true
