[package]
name = "modality-capi"
version = "0.3.0"
edition = "2021"
authors = ["Jon Lamb <jon@auxon.io>"]
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/auxon-sdk"
description = "The C & C++ FFI for Auxon's SDK"
homepage = "https://auxon.io/"
build = "build.rs"
exclude = ["ctest"]
publish = false

[workspace]

[lib]
name = "modality"
crate-type = ["cdylib", "staticlib"]

[dependencies]
auxon-sdk = { path = "../rust", features = ["modality", "deviant", "mutator_server"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "signal"] }
async-trait = "0.1"
url = { version = "2.1" }
uuid = { version = "1.0", features = ["v4"] }
hex = "0.4"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
cbindgen = "0.24"
cdylib-link-lines = "0.1"

[profile.release-with-debug]
inherits = "release"
debug = true
