[package]
name = "auxon-sdk-python"
version = "2.2.0"
edition = "2021"

[lib]
name = "auxon_sdk"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }
auxon-sdk = { path = "../../rust/", features = ["modality", "deviant", "pyo3"] }
serde = "1"
tokio = "1"
pyo3-log = "0.10"
toml = "0.5.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "tracing-log",
] }
