[package]
name = "modality-auth-token"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/modality-sdk"
description = "Provides standardized access to local modality auth tokens."
homepage = "https://auxon.io/"

[features]
default = []
test_support = ["proptest"]

[dependencies]
hex = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }

proptest = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
