[package]
name = "modality-ingest-client"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/modality-sdk"
description = "Modality SDK"
homepage = "https://auxon.io/"

[dependencies]
minicbor = { version = "0.13.1", features = ["std", "derive"] }
modality-api = { version = "0.1", path = "../modality-api" }
modality-ingest-protocol = { version = "0.1", path = "../modality-ingest-protocol" }
native-tls = "0.2.10"
ordered-float = "2.2.0"
thiserror = "1"
tokio = { version = "1", features = ["net", "time", "io-util"] }
tokio-native-tls = "0.3.0"
url = { version = "2.1" }
uuid = { version = "1.0", features = ["v4"] }
