[package]
name = "modality-ingest-client"
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/modality-sdk"
description = "A client library for the modality ingest plane protocol."
homepage = "https://auxon.io/"

[dependencies]
modality-auth-token = { workspace = true }
modality-api = { workspace = true }
modality-ingest-protocol = { workspace = true }
modality-reflector-config = { workspace = true }

minicbor = { workspace = true, features = ["std", "derive"] }
native-tls = { workspace = true }
ordered-float = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "time", "io-util", "fs"] }
tokio-native-tls = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

