[package]
name = "modality-ingest-protocol"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/modality-sdk"
description = "Part of Auxon's Modality SDK"
homepage = "https://auxon.io/"

[features]
default = ["client"]
client = []

[dependencies]
modality-api = { version = "0.1", features = ["client"], path = "../modality-api" }
minicbor = { version = "0.13.1", features = ["std", "derive"] }

