[package]
name = "modality-ingest-protocol"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/modality-sdk"
description = "The protocol definition of the modality ingest plane."
homepage = "https://auxon.io/"

[features]
default = ["client"]
client = []

[dependencies]
modality-api = { workspace = true, features = ["client"] }
minicbor = { workspace = true, features = ["std", "derive"] }

