[package]
name = "modality-mutation-plane-client"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/modality-sdk"
description = "The Modality mutation plane parent and child clients."
homepage = "https://auxon.io/"

[dependencies]
modality-mutation-plane = { workspace = true }

futures = { workspace = true }
minicbor = { workspace = true }
minicbor-io = { workspace = true }
native-tls = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-native-tls = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
