[package]
name = "modality-mutation-plane"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/modality-sdk"
description = "The protocol definition of the Modality mutation plane."
homepage = "https://auxon.io/"

[dependencies]
modality-mutator-protocol = { workspace = true , features = ["cbor", "serde", "proptest_strategies"]}

minicbor = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
modality-mutator-protocol = { workspace = true, features = ["cbor", "serde", "proptest_strategies"]}

proptest = { workspace = true }
