[package]
name = "modality-mutator-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
server = ["async-trait", "axum", "parking_lot", "percent-encoding", "serde_json", "tracing", "tokio", "utoipa", "utoipa-swagger-ui"]

[dependencies]
modality-mutator-interface = { path = "../modality-mutator-interface" , features = ["serde"]}
serde = { workspace = true }
uuid = { workspace = true }

# Required for the "server" feature
async-trait = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
percent-encoding = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync"], optional = true }
tracing = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }

[dev-dependencies]
modality-plugin-utils = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync", "time", "tracing"] }
tracing-subscriber = { workspace = true }

[[example]]
name = "no_mutators"
required-features = ["server"]

[[example]]
name = "single_mutator"
required-features = ["server"]

[[example]]
name = "multi_mutator"
required-features = ["server"]
