[package]
name = "modality-mutator-interface"
version = "0.1.0"
edition = "2021"

[features]
default = []
cbor = ["dep:minicbor"]
proptest_strategies = ["dep:proptest"]
serde = ["dep:serde", "uuid/serde"]
schemars = ["dep:schemars"]

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

minicbor = { workspace = true, optional = true }
proptest = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }