[package]
name = "modality-mutator-protocol"
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/modality-sdk"
description = "The protocol definition of the Modality mutation plane mutator."
homepage = "https://auxon.io/"

[features]
default = []
cbor = ["dep:minicbor"]
proptest_strategies = ["modality-api/proptest_strategies"]
serde = ["dep:serde", "uuid/serde", "modality-api/serde"]
schemars = ["dep:schemars"]

[dependencies]
modality-api = { workspace = true }

async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

minicbor = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
