[package]
name = "modality-reflector-config"
version = "0.1.0"
edition = "2021"

[dependencies]
modality-ingest-client = { version = "0.1", path = "../modality-ingest-client" }
serde = { version = "1.0", features=["derive"] }
thiserror = "1.0.30"
toml = "0.5"
url = { version = "2.1" }

[dev-dependencies]
tempfile = "3.1.0"
