[package]
name = "modality-reflector-config"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/modality-sdk"
description = "Part of Auxon's Modality SDK"
homepage = "https://auxon.io/"

[dependencies]
modality-api = { version = "0.1", path = "../modality-api", default-features = false }
serde = { version = "1.0", features=["derive"] }
thiserror = "1.0.30"
toml = "0.5"
url = { version = "2.1" }
regex = "1.6"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.1.0"
