[package]
name = "modality-reflector-config"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/modality-sdk"
description = """
  A format definition and parser for the `modality-reflector`, to be used \
  by custom reflector plugins that can be hosted within the reflector \
  itself.\
"""
homepage = "https://auxon.io/"

[dependencies]
modality-api = { workspace = true }
modality-auth-token = { workspace = true }
serde = { workspace = true, features=["derive"] }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, features=[] }
regex = { workspace = true }
lazy_static = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3.1.0"
